--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,3 @@
 # Astro Runtime includes the following pre-installed providers packages: https://docs.astronomer.io/astro/runtime-image-architecture#provider-packages
+bs4==0.0.2
+requests==2.31.0
